--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,9 @@
         <label>Reminder Message:</label><br>
         <textarea name="message" placeholder="What do you want to be reminded of?" required></textarea><br><br>
 
+        <label>Delay (minutes):</label><br>
+        <input type="number" name="delay" min="0" value="0"><br><br>
+
         <button type="submit">Send Reminder</button>
     </form>
 </body>
