--- a/templates/index.html
+++ b/templates/index.html
@@ -1,30 +1,19 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>AI Reminder Form</title>
-</head>
-<body>
-    <h1>⏰ AI Reminder Submission</h1>
-    <form method="POST" action="/send">
-        <label>Phone Number:</label><br>
-        <input type="text" name="phone_number" placeholder="e.g. 1234567890" required><br><br>
+<form method="POST" action="/send">
+    <label>Phone Number:</label><br>
+    <input type="text" name="phone_number" placeholder="e.g. 1234567890" required><br><br>
 
-        <label>Carrier:</label><br>
-        <select name="carrier" required>
-            <option value="vtext.com">Verizon</option>
-            <option value="txt.att.net">AT&T</option>
-            <option value="tmomail.net">T-Mobile</option>
-            <option value="messaging.sprintpcs.com">Sprint</option>
-        </select><br><br>
+    <label>Carrier:</label><br>
+    <select name="carrier" required>
+        <option value="vtext.com">Verizon</option>
+        <option value="txt.att.net">AT&T</option>
+        <option value="tmomail.net">T-Mobile</option>
+        <option value="messaging.sprintpcs.com">Sprint</option>
+    </select><br><br>
 
-        <label>Reminder Message:</label><br>
-        <textarea name="message" placeholder="What do you want to be reminded of?" required></textarea><br><br>
+    <label>Reminder Request:</label><br>
+    <input type="text" name="reminder_input" placeholder="e.g. Remind me in 25 minutes to check the pizza" required><br><br>
 
-        <label>Delay (minutes):</label><br>
-        <input type="number" name="delay" min="0" value="0"><br><br>
+    <button type="submit">Send Reminder</button>
+</form>
 
-        <button type="submit">Send Reminder</button>
-    </form>
-</body>
-</html>
 
