--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,9 @@
     </select><br><br>
 
     <label>Reminder Request:</label><br>
-    <input type="text" name="reminder_input" placeholder="e.g. Remind me in 25 minutes to check the pizza" required><br><br>
+    
+    <input type="text" name="reminder_input" placeholder="e.g. Remind me in 25 minutes to check the pizza" required>
+
 
     <button type="submit">Send Reminder</button>
 </form>
