--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,15 @@
     </select><br><br>
 
     <label>Reminder Request:</label><br>
+
+    <script>
+  setInterval(() => {
+    fetch('/check-reminders')
+      .then(res => console.log("Checked reminders"))
+      .catch(err => console.error("Ping failed", err));
+  }, 60000); // every 60 seconds
+</script>
+
     
     <input type="text" name="reminder_input" placeholder="e.g. Remind me in 25 minutes to check the pizza" required>
 
